# Synapse

./: .gitignore  LICENSE  README.md  main.py  my_plugin.py  pyproject.toml  requirements.txt  synapse_demo.db  test_onnx.py  test_vad_offline.py
docs/: agents_and_tools.md  architecture.md  audio_system.md  configuration.md  llm_adapters.md
docs/superpowers/specs/: 2026-07-18-synapse-design.md
examples/: advanced_agent.py  builtin_tools_agent.py  debug_mic.py  debug_mic2.py  echo_demo.py  hello_synapse.py  multi_agent_demo.py  multi_llm_demo.py  offline_assistant_demo.py  vad_demo.py  voice_chat_demo.py
synapse/: config.py
synapse/audio/: __init__.py  player.py  stream.py  utils.py  vad.py  voice_loop.py
synapse/audio/stt/: __init__.py  base.py  faster_whisper_stt.py  openai_stt.py
synapse/audio/tts/: __init__.py  base.py  kokoro_tts.py  openai_tts.py  pyttsx3_tts.py
synapse/core/: engine.py  event_bus.py  memory.py  orchestrator.py  persistent_memory.py  plugin_manager.py
synapse/llm/: __init__.py  anthropic_adapter.py  base.py  mock_adapter.py  ollama_adapter.py  openai_adapter.py
synapse/tools/: registry.py
synapse/tools/builtin/: file_system.py  system.py  web_search.py
synapse/utils/: logger.py
tests/core/: test_engine.py  test_event_bus.py  test_memory.py  test_orchestrator.py  test_persistent_memory.py  test_plugin_manager.py
tests/llm/: test_adapters.py  test_multi_adapters.py  test_openai_adapter.py
tests/tools/: test_file_system.py  test_registry.py  test_system.py  test_web_search.py
tests/utils/: test_logger.py
