[project]
name = "centrumlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0",
    "duckduckgo-search>=8.1.1",
    "openai>=2.46.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
audio = [
    "numpy>=2.5.1",
    "sounddevice>=0.5.5",
    "torch>=2.13.0",
    "torchaudio>=2.11.0",
]
