[project]
name = "centrumlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0",
    "ddgs>=9.14.4",
    "httpx>=0.28.1",
    "onnxruntime>=1.27.0",
    "openai>=2.46.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.18.0",
    "sounddevice>=0.5.5",
]

[project.optional-dependencies]
audio = [
    "httpx>=0.28.1",
    "numpy>=2.5.1",
    "onnxruntime>=1.27.0",
    "sounddevice>=0.5.5",
]
